force-app/main/default/objects/USERHISTORY__User_Field_History__c/USERHISTORY__User_Field_History__c.object-meta.xml
<CustomObject>
    <description>Stores the user field history records based on fields set up for history tracking.</description>
    <label>User Field History</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>User Field History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Field History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>