force-app/main/default/objects/USERHISTORY__User_Field_History__c/fields/USERHISTORY__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>USERHISTORY__Field_Type__c</fullName>
    <description>Field type for this field.</description>
    <inlineHelpText>Field type for this field.</inlineHelpText>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>