force-app/main/default/objects/USERHISTORY__User_Field_History__c/fields/USERHISTORY__New_Rich_Text_Area_Value__c.field-meta.xml
<CustomField>
    <fullName>USERHISTORY__New_Rich_Text_Area_Value__c</fullName>
    <description>Stores the new value of field type Text Area (Rich).</description>
    <inlineHelpText>Stores the new value of field type Text Area (Rich).</inlineHelpText>
    <label>New Rich Text Area Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>