force-app/main/default/objects/USERHISTORY__User_Field_History__c/fields/USERHISTORY__New_Text_Area_Multi_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>USERHISTORY__New_Text_Area_Multi_Picklist_Value__c</fullName>
    <description>Stores the new value of field types Picklist (Multi-Select), Text Area, and Text Area (Long).</description>
    <inlineHelpText>Stores the new value of field types Picklist (Multi-Select), Text Area, and Text Area (Long).</inlineHelpText>
    <label>New Text Area/Multi-Picklist Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>