force-app/main/default/objects/USERHISTORY__User_Field_History__c/fields/USERHISTORY__Previous_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>USERHISTORY__Previous_Date_Value__c</fullName>
    <description>Stores the previous value of field type Date.</description>
    <inlineHelpText>Stores the previous value of field type Date.</inlineHelpText>
    <label>Previous Date Value</label>
    <type>Date</type>
</CustomField>