force-app/main/default/objects/USERHISTORY__User_Field_History__c/listViews/All_User_Field_History_Records1.listView-meta.xml
<ListView>
    <fullName>All_User_Field_History_Records1</fullName>
    <columns>NAME</columns>
    <columns>USERHISTORY__Changed_By__c</columns>
    <columns>USERHISTORY__Date_Time_Changed__c</columns>
    <columns>USERHISTORY__User__c</columns>
    <columns>USERHISTORY__Field_Label__c</columns>
    <columns>USERHISTORY__Field_API_Name__c</columns>
    <columns>USERHISTORY__Field_Type__c</columns>
    <columns>USERHISTORY__Custom_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All User Field History Records</label>
</ListView>