force-app/main/default/objects/USERHISTORY__User_Field_History__c/listViews/OOO_Changes.listView-meta.xml
<ListView>
    <fullName>OOO_Changes</fullName>
    <columns>NAME</columns>
    <columns>USERHISTORY__User__c</columns>
    <columns>USERHISTORY__Field_Label__c</columns>
    <columns>USERHISTORY__Changed_By__c</columns>
    <columns>USERHISTORY__Date_Time_Changed__c</columns>
    <columns>USERHISTORY__Previous_Value__c</columns>
    <columns>USERHISTORY__New_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>USERHISTORY__Field_API_Name__c</field>
        <operation>equals</operation>
        <value>Inbound_ADR_Out_Of_Office__c</value>
    </filters>
    <label>OOO Changes</label>
    <language>en_US</language>
    <sharedTo>
        <role>Management</role>
    </sharedTo>
</ListView>