force-app/main/default/objects/USERHISTORY__User_Field_History__c/listViews/User_Changes.listView-meta.xml
<ListView>
    <fullName>User_Changes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>User Changes</label>
</ListView>