force-app/main/default/objects/USERHISTORY__User_Field_History__c/listViews/User_ChangesV2.listView-meta.xml
<ListView>
    <fullName>User_ChangesV2</fullName>
    <columns>NAME</columns>
    <columns>USERHISTORY__Field_Label__c</columns>
    <columns>USERHISTORY__Previous_Value__c</columns>
    <columns>USERHISTORY__New_Value__c</columns>
    <columns>USERHISTORY__Changed_By__c</columns>
    <columns>USERHISTORY__Date_Time_Changed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>USERHISTORY__User__c</field>
        <operation>equals</operation>
        <value>Andrew Wilson</value>
    </filters>
    <label>User Changes</label>
</ListView>