force-app/main/default/objects/USERHISTORY__User_Field_History__c/listViews/User_Profile_Changes.listView-meta.xml
<ListView>
    <fullName>User_Profile_Changes</fullName>
    <columns>NAME</columns>
    <columns>USERHISTORY__User__c</columns>
    <columns>USERHISTORY__Field_API_Name__c</columns>
    <columns>USERHISTORY__Previous_Value__c</columns>
    <columns>USERHISTORY__New_Value__c</columns>
    <columns>USERHISTORY__Changed_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>USERHISTORY__Field_API_Name__c</field>
        <operation>equals</operation>
        <value>ProfileId</value>
    </filters>
    <label>User Profile Changes</label>
    <language>en_US</language>
</ListView>