force-app/main/default/objects/USERHISTORY__User_Field_History__c/listViews/USERHISTORY__All_User_Field_History_Records.listView-meta.xml
<ListView>
    <fullName>USERHISTORY__All_User_Field_History_Records</fullName>
    <columns>NAME</columns>
    <columns>USERHISTORY__Changed_By__c</columns>
    <columns>USERHISTORY__Date_Time_Changed__c</columns>
    <columns>USERHISTORY__User__c</columns>
    <columns>USERHISTORY__Field_Label__c</columns>
    <columns>USERHISTORY__Field_API_Name__c</columns>
    <columns>USERHISTORY__Field_Type__c</columns>
    <columns>USERHISTORY__Custom_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>USERHISTORY__User__c</field>
        <operation>equals</operation>
        <value>taylor Corr</value>
    </filters>
    <label>All User Field History Records</label>
</ListView>